--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -12,3 +12,4 @@ PRODUCT_BUNDLE_IDENTIFIER = com.example.spongebobStreamer
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+#include "Pods/Target Support Files/Pods-Runner/Pods-Runner.release.xcconfig"
