--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   beautiful_soup_dart: ^0.2.0
   video_player: ^2.4.2
   chewie: ^1.3.3
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
@@ -91,3 +92,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_icons:
+  image_path: "/Users/captain2mac/Documents/Code/spongebob_streamer/assests/icons/icon.png"
+  android: true
+  ios: true
+  remove_alpha_ios: true
