--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   video_player: ^2.4.2
   chewie: ^1.3.3
   flutter_launcher_icons: ^0.9.2
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
