--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   chewie: ^1.3.3
   flutter_launcher_icons: ^0.9.2
   carousel_slider: ^4.1.1
+  url_launcher: ^6.1.2
 
 dev_dependencies:
   flutter_test:
