--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.1.0
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
@@ -95,7 +95,7 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
 
 flutter_icons:
-  image_path: "/Users/captain2mac/Documents/Code/spongebob_streamer/assests/icons/icon.png"
+  image_path: "/Users/captain2mac/IdeaProjects/spongebob_streamer/assests/icons/icon.png"
   android: true
   ios: true
   remove_alpha_ios: true
